crates/rspack_error/tests/fixtures/js_resolved_error/fixtures__js_resolved_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: js_resolved_error
---
error: Resolve error
  ┌─ /Users/bytedance/Documents/rspack/rspack/crates/rspack_error/tests/fixtures/js_resolved_error/index.js:2:1
  │
2 │ import './result.svg'
  │ ^^^^^^^^^^^^^^^^^^^^^ Failed to resolve ./result.svg


